# gridinit

./: CMakeLists.txt  Makefile.am  README.md  configure.ac  gridinit.conf  gridinit.conf.default  gridinit.init  gridinit.init.centos6  gridinit.log4crc  gridinit.log4crc.default  gridinit.sysconfig  project.config  redcurrant-grid-init.spec
alert_spoolmess/: Makefile.am  module.c
lib/: CMakeLists.txt  Makefile.am  children.c  command.c  common.c  gridinit-internals.h  gridinit-utils.h  limits.c  uid.c
main/: CMakeLists.txt  Makefile.am  alerting.c  cnx.c  gridinit.c  gridinit_alerts.h  gridinit_cmd.c  gridinit_internals.h  test_cmd.c  utils.c
